<resources>
    <string name="app_name">RTOSify companion</string>
    <string name="app_title">RTOSify</string>
    <string name="status_searching">Searching…</string>
    <string name="status_waiting">Waiting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_starting">Starting…</string>
    <string name="status_verifying">Verifying…</string>
    <string name="device_name_default">Device</string>
    <string name="toast_watch_not_connected">Watch not connected.</string>
    <string name="toast_bt_not_connected">Bluetooth is not connected</string>
    <string name="phone_settings_title">Volume Settings</string>
    <string name="ringer_mode_title">Ringer Mode</string>
    <string name="ringer_mode_normal">Normal</string>
    <string name="ringer_mode_vibrate">Vibrate</string>
    <string name="ringer_mode_silent">Silent</string>
    <string name="dnd_title">Do Not Disturb</string>
    <string name="volume_title">Volumes</string>
    <string name="loading_phone_settings">Loading settings…</string>
    <string name="error_loading_settings">Failed to load settings</string>
    <string name="toast_command_sent">Command sent</string>
    <string name="toast_upload_failed">Upload failed.</string>
    <string name="volume_channel_media">Media</string>
    <string name="volume_channel_ring">Ring</string>
    <string name="volume_channel_notification">Notification</string>
    <string name="volume_channel_alarm">Alarm</string>
    <string name="volume_channel_system">System</string>
    <string name="dnd_on">DND ON</string>
    <string name="dnd_off">DND OFF</string>
    <string name="dnd_normal">Normal</string>
    <string name="battery_placeholder">—%</string>
    <string name="wifi_verifying">Verifying</string>
    <string name="wifi_placeholder">---</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_disconnect_desc">Stop Bluetooth service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_connect_desc">Start service and connect</string>
    <string name="menu_mirroring">Screen Mirroring</string>
    <string name="menu_mirroring_desc">Stream screen and control remotely</string>
    <string name="menu_reset_all">Reset All</string>
    <string name="menu_reset_all_desc">Clear settings and return to start</string>
    <string name="menu_notification_log">Notification Log</string>
    <string name="menu_notification_log_desc">View last 30 notifications</string>
    <string name="notification_log_title">Notification Log</string>
    <string name="notification_log_empty">No notifications logged</string>
    <string name="notification_log_clear">Clear Log</string>
    <string name="dialog_reset_all_title">Reset All Settings?</string>
    <string name="dialog_reset_all_message">This will clear all settings and return to the start screen. Do you want to continue?</string>
    <string name="dialog_reset_all_confirm">Reset All</string>
    <string name="dialog_reset_all_cancel">Cancel</string>
    <string name="dialog_upload_apk_title">Send APK?</string>
    <string name="dialog_upload_apk_message">Do you want to install this app on the Watch?</string>
    <string name="dialog_upload_apk_send">Send</string>
    <string name="dialog_upload_apk_cancel">Cancel</string>
    <string name="dialog_shutdown_title">Shutdown Smartwatch?</string>
    <string name="dialog_shutdown_message">The smartwatch will be completely powered off.\n\nDo you want to continue?</string>
    <string name="dialog_shutdown_confirm">Shutdown</string>
    <string name="dialog_shutdown_cancel">Cancel</string>
    <string name="dialog_select_watch_title">Select Watch</string>
    <string name="device_no_name">Unnamed</string>
    <string name="upload_transferring">Transferring file…</string>
    <string name="upload_complete_title">Transfer complete</string>
    <string name="upload_complete_message">File transferred successfully!</string>
    <string name="welcome_permission_title">Permission required.</string>
    <string name="welcome_permission_message">To display the SSID of the Wi-Fi network connected to the smartwatch, advanced location permission is required. To do this, select \'Allow all the time\' on the next screen.</string>
    <string name="welcome_permission_understood">Got it</string>
    <string name="welcome_permission_not_now">Not now</string>
    <string name="welcome_configuring">Configuring…</string>
    <string name="welcome_preparing">Please wait while we prepare your watch.</string>
    <string name="welcome_bt_not_supported">This device doesn\'t support Bluetooth</string>
    <string name="welcome_qr_scan_instruction">Scan this QR code on your phone</string>
    <string name="welcome_bt_disabled">Bluetooth is disabled. Please enable it.</string>
    <string name="welcome_pairing_waiting">Scan QR Code on your phone\nWaiting for pairing...</string>
    <string name="welcome_qr_gen_error">Failed to generate QR code</string>
    <string name="welcome_finish">Finish</string>
    <string name="notification_apk_received_title">APK Received</string>
    <string name="notification_apk_received_text">Tap to install</string>
    <string name="notification_config_required_title">Configuration Required</string>
    <string name="notification_config_required_text">Tap to allow installation</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_service_title">Smartwatch</string>
    <string name="notification_phone_disconnected_title">Phone Disconnected</string>
    <string name="notification_phone_disconnected_text">The connection to your phone has been lost.</string>
    <string name="status_no_phone_found">No Phone found.</string>
    <string name="status_connecting_to">Connecting to %s…</string>
    <string name="status_connected_to">Connected to %s</string>
    <string name="status_open_app_phone">Open the app on your Phone and try again.</string>
    <string name="applist_error_processing">Error processing data.</string>
    <string name="applist_title">Installed Apps</string>
    <string name="applist_loading_layout">Loading list…</string>
    <string name="notif_settings_title">Notifications</string>
    <string name="notif_mirroring_title">Mirroring</string>
    <string name="notif_mirroring_desc">Send notifications to the watch</string>
    <string name="title_activity_mirror_settings">Mirror Settings</string>
    <string name="notif_permission_required">Read permission required</string>
    <string name="notif_permission_desc">The app needs to read system notifications to send them to the watch. Tap below to resolve.</string>
    <string name="notif_grant_access">Grant Access</string>
    <string name="notif_apps_title">Applications</string>
    <string name="notif_apps_loading">Loading applications…</string>
    <string name="perm_title">Permissions</string>
    <string name="perm_granted">Granted</string>
    <string name="perm_not_granted">Not Granted</string>
    <string name="perm_bluetooth">Bluetooth</string>
    <string name="perm_bluetooth_desc">Required to scan and connect.</string>
    <string name="perm_install">Install Unknown Apps</string>
    <string name="perm_install_desc">Used to install APPs from the phone.</string>
    <string name="perm_shizuku">Shizuku</string>
    <string name="perm_shizuku_desc">Used to access all files, sync clipboard, power/reboot the device, control wifi/mobile data/bluetooth, install/uninstall APPs, etc.</string>
    <string name="perm_root">Root Access</string>
    <string name="perm_root_desc">replace shizuku in more permanent way.</string>
    <string name="perm_location">Location Services</string>
    <string name="perm_location_desc">Used for reading wifi ssid, find device.</string>
    <string name="perm_location_bg">Background Location</string>
    <string name="perm_location_bg_desc">Allows reading wifi ssid and find device in background.</string>
    <string name="find_watch_alarm_title">Finding Watch…</string>
    <string name="find_watch_alarm_message">Loud sound playing. Press stop when found.</string>
    <string name="find_watch_alarm_stop">Stop</string>
    <string name="menu_find_phone">Find Phone</string>
    <string name="menu_find_phone_desc">Locate connected phone via map</string>
    <string name="menu_phone_settings">Volume Settings</string>
    <string name="menu_phone_settings_desc">Control phone ringer, DND and volume</string>
    <string name="menu_phone_not_found">Phone not connected</string>
    <string name="dialog_find_watch_message">This will play a loud alarm on the phone.</string>
    <string name="dialog_find_watch_start">Start</string>
    <string name="dialog_find_watch_stop">Stop</string>
    <string name="ringtone_picker_title">Select Notification Sound</string>
    <string name="reply_label">Reply</string>
    <string name="action_reply">Reply</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="reply_sender_me">Me</string>
    <string name="perm_storage">Storage Access</string>
    <string name="perm_storage_desc">Used to browse and manage files.</string>
    <string name="perm_post_notif">Post Notifications</string>
    <string name="perm_post_notif_desc">Required to show Android style notifications on the watch.</string>
    <string name="perm_dnd">Do Not Disturb Access</string>
    <string name="perm_dnd_desc">Used to sync DND status between devices.</string>
    <string name="perm_calendar">Calendar Sync</string>
    <string name="dialer_call">Call</string>
    <string name="dialer_delete">Delete</string>
    <string name="alarm_dismiss">Dismiss</string>
    <string name="camera_waiting_video">Waiting for video...</string>
    <string name="camera_shutter">Shutter</string>
    <string name="camera_viewfinder">Viewfinder</string>
    <string name="alarm_snooze_10min">Snooze (10 min)</string>
    <string name="alarm_default_label">Wake up</string>
    <string name="media_play_pause_desc">Play/Pause</string>
    <string name="media_prev_desc">Previous Track</string>
    <string name="media_next_desc">Next Track</string>
    <string name="video_helper_title">Short Video Helper</string>
    <string name="video_helper_gesture_active">Gesture detection active</string>
    <string name="video_helper_tutorial_swipe_up">Swipe UP: Next Video</string>
    <string name="video_helper_tutorial_swipe_down">Swipe DOWN: Prev Video</string>
    <string name="video_helper_tutorial_tap">Single Tap: Play/Pause</string>
    <string name="video_helper_tutorial_double_tap">Double Tap: Like</string>
    <string name="video_helper_tutorial_desc">Perform gestures on the screen to control your phone</string>
    <string name="label_signal">Signal: --</string>
    <string name="status_calculating">Calculating...</string>
    <string name="status_last_updated_waiting">Last updated: Waiting...</string>
    <string name="device_phone">Phone</string>
    <string name="device_watch">Watch</string>
    <string name="action_ring_phone">Ring Phone</string>
    <string name="label_plus">+</string>
    <string name="label_minus">-</string>
    <string name="media_album_art">Album Art</string>
    <string name="media_volume_label">VOLUME</string>
    <string name="media_no_media_short">No Media</string>
    <string name="label_not_connected">Not connected</string>
    <string name="action_open_maps">Open in Maps</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
</resources>